Bug 242842 - webkit loads wrong favicon
Summary: webkit loads wrong favicon
Status: RESOLVED FIXED
Alias: None
Product: kwebkitpart
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: webkit-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-26 07:09 UTC by Michael Tsang
Modified: 2010-06-26 18:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Tsang 2010-06-26 07:09:31 UTC
Version:           unspecified (using KDE 4.4.4) 
OS:                Linux

webkit loads /favicon.ico even <link rel=icon> exists

Reproducible: Always

Steps to Reproduce:
1. open a web page contains <link rel=icon> and the site has /favicon.ico

Actual Results:  
It loads /favicon.ico

Expected Results:  
It loads the icon specified in <link rel=icon>
Comment 1 Dawit Alemayehu 2010-06-26 18:23:44 UTC
SVN commit 1143138 by adawit:

Use the page icon specified through the <link> tag.

BUG:242842


 M  +16 -8     kwebkitpart_p.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1143138