Use the page icon specified through the <link> tag.

BUG:242842